<resources>
    <string name="app_name">AppBudget</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ver_despesas">Ver despesas</string>
    <string name="adicionar_itens">Adicionar itens</string>
    <string name="ver_notifica_es">Ver notificações</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelar">Cancele</string>
    <string name="eliminar">Delete</string>
    <string name="guardar">Save</string>
    <string name="adicionar">Add</string>
    <string name="alterar">Altere</string>
    <string name="saving">Savings</string>
    <string name="graphics">Graphics</string>
    <string name="more">More</string>
    <string name="adicionarDespesas">Add Expenses</string>
    <string name="NameDespesas">Expense Name</string>
    <string name="TipoDespesas">Expense type</string>
    <string name="ValorTotal">Amount</string>
    <string name="ErrorExpenseNew">Unable to store  expense</string>
    <string name="AcertExpenseNew">Able to store  expense</string>
    <string name="RequestNameExpense">must fill Expense Name</string>
    <string name="RequestTypeExpense">must fill Expense Type</string>
    <string name="RequestAmount">must fill Amount</string>
    <string name="Aviso_NameExpense">the Expense Name must be between 1 and 30 letter  </string>
    <string name="Aviso_TypeExpense">the Expense Type must be between 1 and 30 letter  </string>

    <string-array name="TiposDespesas">
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
        <item>yearly</item>
    </string-array>

    <string name="Despesa_eliminado_com_sucesso">Expense successfully deleted</string>
    <string name="erro_eliminar_Despesa">Error deleting Expense</string>
    <string name="Aviso_Eliminar_Despesa">Are you sure you want to delete the Expense?</string>
    <string name="Eliminar_Despesa_label">Delete Expense</string>
    <string name="Valor_Acumulado">Accumulated Value</string>



</resources>